--- a/CRM.master
+++ b/CRM.master
@@ -1,4 +1,4 @@
-﻿<%@ master language="C#" autoeventwireup="true" inherits="CRM, App_Web_nb13wou2" %>
+﻿<%@ master language="C#" autoeventwireup="true" inherits="CRM, App_Web_0petn4s1" %>
 
 <%@ Import Namespace="Sandler.UI.ChartStructure" %>
 <%@ Register Src="Header.ascx" TagName="Header" TagPrefix="uc1" %>
