--- a/Site.master
+++ b/Site.master
@@ -1,4 +1,4 @@
-﻿<%@ master language="C#" autoeventwireup="true" inherits="SiteMaster, App_Web_dxurhf0z" %>
+﻿<%@ master language="C#" autoeventwireup="true" inherits="SiteMaster, App_Web_l2huaae2" %>
 
 <%@ Import Namespace="Sandler.UI.ChartStructure" %>
 <%@ Register Src="Header.ascx" TagName="Header" TagPrefix="uc1" %>
