--- a/CRM.master
+++ b/CRM.master
@@ -1,4 +1,4 @@
-﻿<%@ master language="C#" autoeventwireup="true" inherits="CRM, App_Web_qqxwmkoz" %>
+﻿<%@ master language="C#" autoeventwireup="true" inherits="CRM, App_Web_lc021a1i" %>
 
 <%@ Import Namespace="Sandler.UI.ChartStructure" %>
 <%@ Register Src="Header.ascx" TagName="Header" TagPrefix="uc1" %>
