--- a/Styles/CRMSite.css
+++ b/Styles/CRMSite.css
@@ -1,34 +1,34 @@
 ﻿body
 {
-	background: #8EB4E6;
-	font-size: .80em;
-	font-family: "Helvetica Neue" , "Lucida Grande" , "Segoe UI" , Arial, Helvetica, Verdana, sans-serif;
-	margin: 0px;
-	padding: 0px;
-	color: #000000;
+    background: #8EB4E6;
+    font-size: .80em;
+    font-family: "Helvetica Neue" , "Lucida Grande" , "Segoe UI" , Arial, Helvetica, Verdana, sans-serif;
+    margin: 0px;
+    padding: 0px;
+    color: #000000;
 }
 
 a:link, a:visited
 {
-	color: blue;
-	text-decoration: none;
+    color: blue;
+    text-decoration: none;
 }
 
 a:hover
 {
-	color: blue;
-	text-decoration: underline;
+    color: blue;
+    text-decoration: underline;
 }
 
 a:active
 {
-	color: blue;
+    color: blue;
 }
 
 p
 {
-	margin-bottom: 10px;
-	line-height: 1.6em;
+    margin-bottom: 10px;
+    line-height: 1.6em;
 }
 
 
@@ -37,47 +37,47 @@ p
 
 h1, h2, h3, h4, h5, h6
 {
-	font-size: 1.5em;
-	color: #666666;
-	font-variant: small-caps;
-	text-transform: none;
-	font-weight: 200;
-	margin-bottom: 0px;
+    font-size: 1.5em;
+    color: #666666;
+    font-variant: small-caps;
+    text-transform: none;
+    font-weight: 200;
+    margin-bottom: 0px;
 }
 
 h1
 {
-	font-size: 1.6em;
-	padding-bottom: 0px;
-	margin-bottom: 0px;
+    font-size: 1.6em;
+    padding-bottom: 0px;
+    margin-bottom: 0px;
 }
 
 h2
 {
-	font-size: 1.5em;
-	font-weight: 600;
+    font-size: 1.5em;
+    font-weight: 600;
 }
 
 h3
 {
-	font-size: 1.2em;
+    font-size: 1.2em;
 }
 
 h4
 {
-	font-size: 1.1em;
+    font-size: 1.1em;
 }
 
 h5, h6
 {
-	font-size: 1em;
+    font-size: 1em;
 }
 
 /* this rule styles <h1> and <h2> tags that are the 
 first child of the left and right table columns */
 .rightColumn > h1, .rightColumn > h2, .leftColumn > h1, .leftColumn > h2
 {
-	margin-top: 0px;
+    margin-top: 0px;
 }
 
 
@@ -86,89 +86,89 @@ first child of the left and right table columns */
 
 .page
 {
-	/*width: 960px;*/
-	background-color: #8EB4E6;
-	margin: 20px auto 0px auto;
+    /*width: 960px;*/
+    background-color: #8EB4E6;
+    margin: 20px auto 0px auto;
 }
 
 .header
 {
-	position: relative;
-	margin: 0px;
-	padding: 0px;
-	background: #8EB4E6;
-	width: 80%;
-	margin: 20px auto 0px auto;
+    position: relative;
+    margin: 0px;
+    padding: 0px;
+    background: #8EB4E6;
+    width: 80%;
+    margin: 20px auto 0px auto;
 }
 
 .header h1
 {
-	font-weight: 700;
-	margin: 0px;
-	padding: 0px 0px 0px 20px;
-	color: #f9f9f9;
-	border: none;
-	line-height: 2em;
-	font-size: 2em;
+    font-weight: 700;
+    margin: 0px;
+    padding: 0px 0px 0px 20px;
+    color: #f9f9f9;
+    border: none;
+    line-height: 2em;
+    font-size: 2em;
 }
 
 .CRMSubMenus
 {
-	background-color: white;
-	width: 100%;
-	margin: 20px auto 0px auto;
+    background-color: white;
+    width: 100%;
+    margin: 20px auto 0px auto;
 }
 .CRMSubMenus a:link
 {
-	color: #0000FF;
-	font-size: large;
-	text-decoration: none;
+    color: #0000FF;
+    font-size: large;
+    text-decoration: none;
 }
 
 .CRMSubMenus a:visited
 {
-	color: #0000FF;
-	font-size: large;
-	text-decoration: none;
+    color: #0000FF;
+    font-size: large;
+    text-decoration: none;
 }
 
 a.CRMSubMenusActive:link
 {
-	font-weight: bold;
-	text-decoration: underline;
+    font-weight: bold;
+    text-decoration: underline;
 }
 
 a.CRMSubMenusActive:visited
 {
-	font-weight: bold;
-	text-decoration: underline;
+    font-weight: bold;
+    text-decoration: underline;
 }
 
 
 .main
 {
-	width: 80%;
-	margin: 20px auto 0px auto;
-	min-height: 420px;
+    width: 80%;
+    margin: 20px auto 0px auto;
+    min-height: 420px;
 }
 
 .leftCol
 {
-	padding: 6px 0px;
-	margin: 12px 8px 8px 8px;
-	width: 200px;
-	min-height: 200px;
+    padding: 6px 0px;
+    margin: 12px 8px 8px 8px;
+    width: 200px;
+    min-height: 200px;
 }
 
 .footer
 {
-	color: #FFFFFF;
-	padding: 8px 0px 0px 0px;
-	margin: 0px auto;
-	text-align: center;
-	line-height: normal;
-	width: 80%;
-	margin: 20px auto 0px auto;
+    color: #FFFFFF;
+    padding: 8px 0px 0px 0px;
+    margin: 0px auto;
+    text-align: center;
+    line-height: normal;
+    width: 80%;
+    margin: 20px auto 0px auto;
 }
 
 /* TAB MENU   
@@ -176,41 +176,41 @@ a.CRMSubMenusActive:visited
 
 div.hideSkiplink
 {
-	background-color: #8EB4E6;
-	width: 100%;
+    background-color: #8EB4E6;
+    width: 100%;
 }
 
 div.menu
 {
-	padding: 4px 0px 4px 8px;
+    padding: 4px 0px 4px 8px;
 }
 
 div.menu ul
 {
-	list-style: none;
-	margin: 0px;
-	padding: 0px;
-	width: auto;
+    list-style: none;
+    margin: 0px;
+    padding: 0px;
+    width: auto;
 }
 
 div.menu ul li a
 {
-	background-color: #3366cc;
-	border: 1px #4e667d solid;
-	color: #dde4ec;
-	display: block;
-	line-height: 1.35em;
-	padding: 4px 20px;
-	text-decoration: none;
-	white-space: nowrap;
+    background-color: #3366cc;
+    border: 1px #4e667d solid;
+    color: #dde4ec;
+    display: block;
+    line-height: 1.35em;
+    padding: 4px 20px;
+    text-decoration: none;
+    white-space: nowrap;
 }
 
 
 div.menu ul li a:active
 {
-	background-color: #ff800d;
-	color: #cfdbe6;
-	text-decoration: none;
+    background-color: #ff800d;
+    color: #cfdbe6;
+    text-decoration: none;
 }
 
 /* FORM ELEMENTS   
@@ -218,48 +218,48 @@ div.menu ul li a:active
 
 fieldset
 {
-	margin: 1em 0px;
-	padding: 1em;
-	border: 1px solid #ccc;
+    margin: 1em 0px;
+    padding: 1em;
+    border: 1px solid #ccc;
 }
 
 fieldset p
 {
-	margin: 2px 12px 10px 10px;
+    margin: 2px 12px 10px 10px;
 }
 
 fieldset.login label, fieldset.register label, fieldset.changePassword label
 {
-	display: block;
+    display: block;
 }
 
 fieldset label.inline
 {
-	display: inline;
+    display: inline;
 }
 
 legend
 {
-	font-size: 1.1em;
-	font-weight: 600;
-	padding: 2px 4px 8px 4px;
+    font-size: 1.1em;
+    font-weight: 600;
+    padding: 2px 4px 8px 4px;
 }
 
 input.textEntry
 {
-	width: 320px;
-	border: 1px solid #ccc;
+    width: 320px;
+    border: 1px solid #ccc;
 }
 
 input.passwordEntry
 {
-	width: 320px;
-	border: 1px solid #ccc;
+    width: 320px;
+    border: 1px solid #ccc;
 }
 
 div.accountInfo
 {
-	width: 42%;
+    width: 42%;
 }
 
 /* MISC  
@@ -267,263 +267,298 @@ div.accountInfo
 
 .clear
 {
-	clear: both;
+    clear: both;
 }
 
 .title
 {
-	display: block;
-	float: left;
-	text-align: left;
-	width: auto;
+    display: block;
+    float: left;
+    text-align: left;
+    width: auto;
 }
 
 .loginDisplay
 {
-	font-size: 1.1em;
-	display: block;
-	text-align: right;
-	padding: 10px;
-	color: White;
+    font-size: 1.1em;
+    display: block;
+    text-align: right;
+    padding: 10px;
+    color: White;
 }
 
 .loginDisplay a:link
 {
-	color: white;
+    color: white;
 }
 
 .loginDisplay a:visited
 {
-	color: white;
+    color: white;
 }
 
 .loginDisplay a:hover
 {
-	color: white;
+    color: white;
 }
 
 .failureNotification
 {
-	font-size: 1.2em;
-	color: Red;
+    font-size: 1.2em;
+    color: Red;
 }
 
 .bold
 {
-	font-weight: bold;
+    font-weight: bold;
 }
 
 .submitButton
 {
-	text-align: right;
-	padding-right: 10px;
+    text-align: right;
+    padding-right: 10px;
 }
 
 .menuButton
 {
-	background-color: blue;
-	color: #FFFFFF;
+    background-color: blue;
+    color: #FFFFFF;
 }
 
 .menuButtonActive
 {
-	background-color: #ff800d;
+    background-color: #ff800d;
 }
 a.menuLink
 {
-	border-style: solid;
-	border-width: .15em;
-	border-color: #FFFFFF #808080 #808080 #FFFFFF;
-	background-color: blue;
-	color: #FFFFFF;
-	padding-top: 0.1em;
-	padding-left: 0.3em;
-	padding-right: 0.3em;
-	padding-bottom: 0.1em;
-	text-decoration: none;
+    border-style: solid;
+    border-width: .15em;
+    border-color: #FFFFFF #808080 #808080 #FFFFFF;
+    background-color: blue;
+    color: #FFFFFF;
+    padding-top: 0.1em;
+    padding-left: 0.3em;
+    padding-right: 0.3em;
+    padding-bottom: 0.1em;
+    text-decoration: none;
 }
 a.menuLink:link
 {
-	border-style: solid;
-	border-width: .15em;
-	border-color: #FFFFFF #808080 #808080 #FFFFFF;
-	background-color: blue;
-	color: #FFFFFF;
-	padding-top: 0.1em;
-	padding-left: 0.3em;
-	padding-right: 0.3em;
-	padding-bottom: 0.1em;
-	text-decoration: none;
+    border-style: solid;
+    border-width: .15em;
+    border-color: #FFFFFF #808080 #808080 #FFFFFF;
+    background-color: blue;
+    color: #FFFFFF;
+    padding-top: 0.1em;
+    padding-left: 0.3em;
+    padding-right: 0.3em;
+    padding-bottom: 0.1em;
+    text-decoration: none;
 }
 a.menuLink:visited
 {
-	border-style: solid;
-	border-width: .15em;
-	border-color: #FFFFFF #808080 #808080 #FFFFFF;
-	background-color: blue;
-	color: #FFFFFF;
-	padding-top: 0.1em;
-	padding-left: 0.3em;
-	padding-right: 0.3em;
-	padding-bottom: 0.1em;
-	text-decoration: none;
+    border-style: solid;
+    border-width: .15em;
+    border-color: #FFFFFF #808080 #808080 #FFFFFF;
+    background-color: blue;
+    color: #FFFFFF;
+    padding-top: 0.1em;
+    padding-left: 0.3em;
+    padding-right: 0.3em;
+    padding-bottom: 0.1em;
+    text-decoration: none;
 }
 a.menuLinkActive
 {
-	border-style: solid;
-	border-width: .15em;
-	border-color: #FFFFFF #808080 #808080 #FFFFFF;
-	background-color: #ff800d;
-	color: #FFFFFF;
-	padding-top: 0.1em;
-	padding-left: 0.3em;
-	padding-right: 0.3em;
-	padding-bottom: 0.1em;
-	text-decoration: none;
+    border-style: solid;
+    border-width: .15em;
+    border-color: #FFFFFF #808080 #808080 #FFFFFF;
+    background-color: #ff800d;
+    color: #FFFFFF;
+    padding-top: 0.1em;
+    padding-left: 0.3em;
+    padding-right: 0.3em;
+    padding-bottom: 0.1em;
+    text-decoration: none;
 }
 a.menuLinkActive:link
 {
-	border-style: solid;
-	border-width: .15em;
-	border-color: #FFFFFF #808080 #808080 #FFFFFF;
-	background-color: #ff800d;
-	color: #FFFFFF;
-	padding-top: 0.1em;
-	padding-left: 0.3em;
-	padding-right: 0.3em;
-	padding-bottom: 0.1em;
-	text-decoration: none;
+    border-style: solid;
+    border-width: .15em;
+    border-color: #FFFFFF #808080 #808080 #FFFFFF;
+    background-color: #ff800d;
+    color: #FFFFFF;
+    padding-top: 0.1em;
+    padding-left: 0.3em;
+    padding-right: 0.3em;
+    padding-bottom: 0.1em;
+    text-decoration: none;
 }
 a.menuLinkActive:visited
 {
-	border-style: solid;
-	border-width: .15em;
-	border-color: #FFFFFF #808080 #808080 #FFFFFF;
-	background-color: #ff800d;
-	color: #FFFFFF;
-	padding-top: 0.1em;
-	padding-left: 0.3em;
-	padding-right: 0.3em;
-	padding-bottom: 0.1em;
-	text-decoration: none;
+    border-style: solid;
+    border-width: .15em;
+    border-color: #FFFFFF #808080 #808080 #FFFFFF;
+    background-color: #ff800d;
+    color: #FFFFFF;
+    padding-top: 0.1em;
+    padding-left: 0.3em;
+    padding-right: 0.3em;
+    padding-bottom: 0.1em;
+    text-decoration: none;
 }
 .disableLink
 {
-	background-color: #999999;
-	color: #FFFFFF;
-	border-style: solid;
-	border-width: .1em;
-	border-color: #FFFFFF #808080 #808080 #FFFFFF;
-	padding-top: 0.1em;
-	padding-left: 0.3em;
-	padding-right: 0.3em;
-	padding-bottom: 0.1em;
+    background-color: #999999;
+    color: #FFFFFF;
+    border-style: solid;
+    border-width: .1em;
+    border-color: #FFFFFF #808080 #808080 #FFFFFF;
+    padding-top: 0.1em;
+    padding-left: 0.3em;
+    padding-right: 0.3em;
+    padding-bottom: 0.1em;
 }
 
 .disableLink:link
 {
-	background-color: #999999;
-	color: #FFFFFF;
-	border-style: solid;
-	border-width: .1em;
-	border-color: #FFFFFF #808080 #808080 #FFFFFF;
-	padding-top: 0.1em;
-	padding-left: 0.3em;
-	padding-right: 0.3em;
-	padding-bottom: 0.1em;
+    background-color: #999999;
+    color: #FFFFFF;
+    border-style: solid;
+    border-width: .1em;
+    border-color: #FFFFFF #808080 #808080 #FFFFFF;
+    padding-top: 0.1em;
+    padding-left: 0.3em;
+    padding-right: 0.3em;
+    padding-bottom: 0.1em;
 }
 
 .disableLink:visited
 {
-	background-color: #999999;
-	color: #FFFFFF;
-	border-style: solid;
-	border-width: .1em;
-	border-color: #FFFFFF #808080 #808080 #FFFFFF;
-	padding-top: 0.1em;
-	padding-left: 0.3em;
-	padding-right: 0.3em;
-	padding-bottom: 0.1em;
+    background-color: #999999;
+    color: #FFFFFF;
+    border-style: solid;
+    border-width: .1em;
+    border-color: #FFFFFF #808080 #808080 #FFFFFF;
+    padding-top: 0.1em;
+    padding-left: 0.3em;
+    padding-right: 0.3em;
+    padding-bottom: 0.1em;
 }
 
 .disableLink:hover
 {
-	background-color: #999999;
-	color: #FFFFFF;
-	border-style: solid;
-	border-width: .1em;
-	border-color: #FFFFFF #808080 #808080 #FFFFFF;
-	padding-top: 0.1em;
-	padding-left: 0.3em;
-	padding-right: 0.3em;
-	padding-bottom: 0.1em;
+    background-color: #999999;
+    color: #FFFFFF;
+    border-style: solid;
+    border-width: .1em;
+    border-color: #FFFFFF #808080 #808080 #FFFFFF;
+    padding-top: 0.1em;
+    padding-left: 0.3em;
+    padding-right: 0.3em;
+    padding-bottom: 0.1em;
 }
 
 .calendar .ajax__calendar_container
 {
-	border: thin solid #000000;
-	background-color: white;
-	color: #000000;
+    border: thin solid #000000;
+    background-color: white;
+    color: #000000;
 }
 
 .calendar .ajax__calendar_header
 {
-	background-color: #FFFF00;
+    background-color: #FFFF00;
 }
 
-.calendar .ajax__calendar_dayname 
+.calendar .ajax__calendar_dayname
 {
-	background-color: #FF9933;
+    background-color: #FF9933;
 }
 
 .calendar .ajax__calendar_footer
 {
-	background-color: #FFFFFF;
-	color: #0000FF;
+    background-color: #FFFFFF;
+    color: #0000FF;
 }
 
 .calendar .ajax__calendar_days
 {
-	background-color:#336699;
-	color:White;
+    background-color: #336699;
+    color: White;
 }
 .calendar .ajax__calendar_today
 {
-	text-decoration: underline;
-	font-weight: bold;
-	color:blue;
+    text-decoration: underline;
+    font-weight: bold;
+    color: blue;
 }
 
 .calendar .ajax__calendar_month
 {
-	background-color: #336699;
-	color: #FFFFFF;
+    background-color: #336699;
+    color: #FFFFFF;
 }
 
 .calendar .ajax__calendar_years
 {
-	background-color: #336699;
-	color: #FFFFFF;
+    background-color: #336699;
+    color: #FFFFFF;
 }
 
 .Pager
 {
     background-color: #999999;
-    
 }
 
 .Pager table
 {
-    text-align:center;
-    margin-left:auto;
-    margin-right:auto;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+.Pager table td
+{
+    border: thin solid black;
+    padding-right: 5px;
+    padding-left: 5px;
 }
 .Pager a
 {
-	color:Blue;
-	text-decoration:underline;
+    color: white;
+    text-decoration: underline;
 }
 .Pager a.selected
 {
-	text-decoration: none;
+    text-decoration: none;
+}
+
+.gvPager td
+{
+    color: #FFFFFF;
+    background-color: #999999;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+}
+
+.gvPager td a
+{
+    color: #FFFFFF;
+    text-decoration: underline;
+}
+
+.gvPager td table
+{
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.gvPager td table td
+{
+    border: thin solid black;
+    padding-right: 5px;
+    padding-left: 5px;
 }
