Changes for industrytype color code, documents with compnay id insert, email test

--- a/Site.master
+++ b/Site.master
@@ -1,4 +1,4 @@
-﻿<%@ master language="C#" autoeventwireup="true" inherits="SiteMaster, App_Web_focafei5" %>
+﻿<%@ master language="C#" autoeventwireup="true" inherits="SiteMaster, App_Web_5i4ski4s" %>
 
 <%@ Import Namespace="Sandler.UI.ChartStructure" %>
 <%@ Register Src="Header.ascx" TagName="Header" TagPrefix="uc1" %>
